--- a/css/style.css
+++ b/css/style.css
@@ -120,28 +120,28 @@ aside{
     flex: 2 1 !important;
 }
 
-.green{
+.green, .keyGreen{
     background-color: green !important;
     color: var(--color1) !important;
     transition-duration: 0.25s;
 }
-.green:hover{
+.keyGreen:hover{
     background-color: rgb(0, 44, 0) !important;
 }
-.yellow{
+.yellow, .keyYellow{
     background-color: gold !important;
     color: var(--color1) !important;
     transition-duration: 0.25s;
 }
-.yellow:hover{
+.keyYellow:hover{
     background-color: rgb(134, 114, 0) !important;
 }
-.none{
+.none, .keyNone{
     background-color: grey !important;
     color: var(--color1);
     transition-duration: 0.25s;
 }
-.none:hover{
+.keyNone:hover{
     background-color: rgb(56, 56, 56) !important;
 }
 
